# apply-pilot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  pytest.txt  ruff.txt  ty.txt  ty_final.txt
.agents/: github_bootstrap_plan.md
.agents/skills/workflow/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: README  env.py  script.py.mako
alembic/versions/: 0001_baseline.py  1d2e3f4a5b6c_apply_worker_add_apply_status_history_table.py  40b1271d5be8_merge_post_m7_m8_migration_heads.py  4f389cbeb844_max_add_max_accounts_table.py  5a3c8f7e1b2d_audit_add_audit_logs_table.py  5b7c8d9e0f1a_merge_apply_rate_limit_into_main.py  5c8a9b0d1e2f_apply_worker_add_apply_jobs_table.py  71a2b3c4d5e6_writing_style_memory_add_style_memory_entries.py  7b1a4c5d8e2f_quick_filter_add_filter_decisions_table.py  8789b1e18428_scoring_add_llm_scoring_fields_to_.py  8c290cad3915_add_users_table.py  8f1c2d3e4f56_screening_add_screening_questions_and_.py  9b1c2d3e4f56_scoring_add_confidence_to_vacancy_matches.py  9f1a2b3c4d5e_apply_worker_add_apply_rate_limit_events_.py  a03366a19528_resumes_add_resumes_table.py  a1b2c3d4e5f6_scoring_add_prompt_versions_and_extend_vacancy_matches.py  a1c2d3e4f5b6_users_add_is_admin_flag.py  a5b6c7d8e9f0_source_metrics_add_source_metric_events_table.py  a8c0f1d2e3b4_cover_letter_add_cover_letter_drafts_table.py  b17c001a19528_search_profiles_add_search_profiles_table.py  b1d2e3f4a5b6_telegram_add_telegram_accounts_table.py  b2c3d4e5f6a7_cover_letter_add_cover_letter_drafts_table.py  c0d1e2f3a4b5_matches_denormalize_user_id.py  c23d4a1b2e3f_sources_add_vacancies_table.py  c31323bea8d1_baseline.py  c4d5e6f7a8b9_cover_letter_add_version_column.py  c63d4a1b2e3f_learning_add_learning_signals_table.py  d4e7f8a9b123_add_user_sessions_table.py  d5f8a9b0c123_matches_add_vacancy_matches_table.py  e20f9a1b2c3d_hh_add_hh_credentials_table.py  e2a3b4c5d6f7_sources_add_created_at_indexes_to_vacancies.py  eb6c1c51520c_search_profiles_add_is_preferred.py  f0e1a2b3c4d5_cover_letter_style_add_cover_letter_styles_table.py  f1a2b3c4d5e6_hh_add_hh_resume_links_table.py  g7h8i9j0k1l2_scoring_ab_add_scoring_experiments_and_.py  h1i2j3k4l5m6_sources_add_vacancies_created_at_index.py
certs/: README.md
docs/: VSA.md  hh-oauth.md
docs/integrations/: hh_apply.md
docs/research/: habr-career-source-evaluation.md
scripts/: bootstrap_github.sh  install-mincifry-ca.sh  worktree-cleanup.sh
src/apply_pilot/: __init__.py  app.py  config.py  core.py  db.py
src/apply_pilot/cli/: __init__.py  promote.py
src/apply_pilot/features/: __init__.py
src/apply_pilot/runtime/: __init__.py  process.py  redis_client.py
src/apply_pilot/shared/: __init__.py  errors.py  logging.py  schemas.py  types.py
src/job_apply/: __init__.py  app.py  config.py  db.py
src/job_apply/runtime/: __init__.py  process.py  redis_client.py
src/job_apply/shared/: __init__.py  logging.py
tests/: conftest.py  test_app.py  test_core.py  test_db.py  test_import_graph.py  test_landing.py  test_process_runtime.py  test_redis_client.py  test_shared.py
tests/features/: test_shared_session_isolation.py
tests/features/admin/: conftest.py  test_admin_api.py  test_admin_auth_gate.py  test_admin_web.py  test_health_checks.py  test_health_page.py  test_imports.py  test_integrations.py
tests/features/apply_worker/: test_apply_status_history.py  test_apply_worker.py  test_apply_worker_api.py  test_apply_worker_hh_adapter.py  test_apply_worker_models.py  test_apply_worker_repository.py  test_apply_worker_service.py  test_hh_adapter.py  test_history_api.py  test_limits.py  test_notifications.py  test_retry_policy.py
tests/features/audit/: test_audit_integration.py  test_audit_service.py
tests/features/careers/: test_careers_slice.py
tests/features/cover_letter/: test_cover_letter_service.py  test_history.py
tests/features/cover_letter_style/: test_style_api.py  test_style_repository.py  test_style_service.py
tests/features/dashboard/: test_analytics.py  test_dashboard.py  test_dashboard_web.py
tests/features/hh/: test_apply.py  test_credentials_api.py  test_credentials_service.py  test_encryption.py  test_oauth.py  test_oauth_api.py  test_resumes_sync.py  test_search.py
tests/features/hh_apply/: conftest.py  test_client.py  test_config.py  test_models.py  test_observability.py  test_optional_live.py  test_service.py  test_tenancy.py
tests/features/learning/: test_learning_api.py  test_learning_signals.py
tests/features/matches/: test_match_api.py  test_match_repository.py  test_match_service.py  test_scoring_persistence.py
tests/features/max/: conftest.py  test_bypass_handlers.py  test_linking.py  test_max_bot.py  (+9 more)
tests/runtime/: test_process.py  test_redis_client.py
userstory/: README.md
(+463 files in other folders)
