[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apply-pilot"
version = "0.2.0"
description = "Telegram-first assistant for finding, scoring, reviewing, and applying to jobs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.50",
    "alembic>=1.13.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "asyncpg>=0.31.0",
    "redis[hiredis]>=8.0.0",
    "httpx>=0.28.1",
    "fakeredis>=2.36.1",
]

[project.scripts]
apply-pilot-api = "job_apply.app:run"
apply-pilot-bot = "job_apply.features.telegram.process:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-timeout>=2.3.1",
    "ruff>=0.5.7",
    "ty>=0.0.1a16",
    "pre-commit>=4.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = []



[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v -n auto --cov=src --cov-report=term-missing"
timeout = 5

[tool.alembic]
script_location = "alembic"
prepend_sys_path = ["src"]
