[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apply-pilot"
version = "0.19.1"
description = "Telegram-first assistant for finding, scoring, reviewing, and applying to jobs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.50",
    "alembic>=1.13.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "asyncpg>=0.31.0",
    "redis[hiredis]>=8.0.0",
    "httpx>=0.28.1",
    "fakeredis>=2.36.1",
    "cryptography>=46.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
]

[project.scripts]
apply-pilot-api = "apply_pilot.app:run"
apply-pilot-bot = "apply_pilot.features.telegram.process:main"
apply-pilot = "apply_pilot.cli:main"
apply-pilot-max-bot = "apply_pilot.features.max.process:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-timeout>=2.3.1",
    "ruff>=0.5.7",
    "ty>=0.0.1a16",
    "pre-commit>=4.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]


[tool.ty.rules]
# TODO chore/ci-ty-green Tier-3: refine Local Protocols so these
# structural mismatches become true positive type errors.
unresolved-attribute  = "warn"
invalid-argument-type = "warn"
invalid-return-type   = "warn"
invalid-type-form     = "warn"
invalid-assignment    = "warn"
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = []



[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v -n auto --cov=src --cov-report=term-missing"
timeout = 5

[tool.alembic]
script_location = "alembic"
prepend_sys_path = ["src"]

# ty configuration. See https://docs.astral.sh/ty/reference/configuration/
# for the schema; ty is already scoped to ``src/`` by the CI command
[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.12",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
]
